# backtester

./: AAPL.csv  Cargo.toml  README.md  hey.txt
benches/: indicators.rs
benches/datasets/: AAPL_1Y.csv  AAPL_5Y.csv
benches/datasets/indicators/: DFF.csv
benches/datasets/timeseries/: AAC.csv
src/: backtest.rs  broker.rs  bt.rs  lib.rs  main.rs  series.rs  timeseries.rs  types.rs
src/core/: broker.rs  bt.rs  mod.rs  order.rs  trade.rs
src/dataframe/: mod.rs  ticker.rs  timeseries.rs  timeseriesbatch.rs
src/indicators/: effr.rs  indicator.rs  mod.rs  moving_average.rs  rsi.rs  sma.rs
src/miner/: bt.rs
src/strategy/: buy_and_hold.rs  effr_trading.rs  mod.rs  sma_crossover.rs  strategy.rs
src/util/: config.rs  csv_reader.rs  io.rs  mod.rs  serde_ext.rs
